<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/material_blue_grey_800">

        <ImageView
            android:id="@+id/action_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_mei" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@id/action_icon"
            android:layout_toRightOf="@id/action_icon"
            android:gravity="center_vertical"
            android:text="@string/moreText"
            android:textColor="@android:color/white"/>
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/fineAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/material_blue_grey_800"
            android:text="@string/findApp"
            android:textColor="@color/primary_text_default_material_dark" />

        <View
            android:layout_width="1px"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/fineAppButton"
            android:layout_toStartOf="@id/fineAppButton"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/setting"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.8dp"
                android:background="@color/material_blue_grey_800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/msgNotify"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_blue_grey_800" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="start|center_vertical"
                    android:text="@string/noneImgMode" />

                <Switch
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_blue_grey_800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:padding="15dp"
                android:text="@string/sharingSetting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_blue_grey_800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:padding="15dp"
                android:text="@string/invite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_blue_grey_800" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start|center_vertical"
                    android:text="@string/fontSize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:text="@string/middleFontSize" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_blue_grey_800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:padding="15dp"
                android:text="@string/cleanCache" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_blue_grey_800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/otherAction"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.8dp"
                android:background="@color/material_blue_grey_800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:padding="15dp"
                android:text="@string/scan" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_blue_grey_800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:padding="15dp"
                android:text="@string/feedback" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/material_blue_grey_800" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:padding="15dp"
                android:text="@string/help" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>