<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_red_dark">
    <TextView android:id="@+id/infoTitle3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/infoOnPager3Title"
              android:textSize="24sp"
              android:gravity="center_horizontal"
              android:layout_marginTop="30dp"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/infoOnPager3Info"
              android:layout_below="@id/infoTitle3"
              android:gravity="center_horizontal"
              android:padding="20dp"/>
    <Button android:id="@+id/goButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_btn"
            android:text="@string/textOnPager3Button"/>
</RelativeLayout>